cluster-setup/traefik/dashboard/traefik-dashboard.yaml
# https://kubernetes.io/docs/concepts/configuration/configmap/
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.local`) || Host(`traefik.kjunghoan.com`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-auth
          namespace: kube-system
      services:
        - name: api@internal
          kind: TraefikService
